2012-10-04  Ben Elliston  <bje@gnu.org>

	* aclocal.m4: Regenerate with automake 1.11.3.
	* Makefile.in: Likewise.
	* configure: Regenerate with autoconf 2.68.

2012-08-22  Steve Ellcey  <sellcey@mips.com>

	* baseboards/generic-sim.exp: New baseboard definition.

2012-06-15  Andreas Schwab  <schwab@linux-m68k.org>

	* lib/framework.exp (clone_output): Protect from leading dash in
	$message.
	* runtest.exp (verbose): Likewise.

2012-06-11  Tom Tromey  <tromey@redhat.com>

	* doc/runtest.1: Update.
	* runtest.exp (xml_file_name): New global.
	(usage): Update.
	Handle optional argument to --xml.
	* lib/framework.exp (open_logs): Respect xml_file_name.

2012-03-24  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* runtest.exp (load_tool_init): Fix typo in -de option handling.

2012-03-24  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/runtest.1: Correct name of debug file.

2012-02-25  Ben Elliston  <bje@gnu.org>

	* runtest: Search /usr/share/dejagnu and /usr/local/share/dejagnu
	for runtest.exp as a last resort (for usrmove environments, where
	/bin is a link to /usr/bin). From Honza Horak <hhorak@redhat.com>.

2011-12-30  Ben Elliston  <bje@gnu.org>

	* doc/user.xml: Various spelling and consistency fixes.
	* doc/ref.xml: Likewise.
	(exit_remote_shell): Remove, as this procedure is defunct.
	* doc/dejagnu.texi: Regenerate.

2011-12-30  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2011-12-29.
	* config.sub: Update to version 2011-11-11.

2011-06-30  Tom Tromey  <tromey@redhat.com>

	* doc/ref.xml: Document find_gfortran.
	* doc/dejagnu.texi: Regenerate.
	* lib/target.exp (default_target_compile): Handle f90.
	(default_target_compile): Likewise.
	* lib/libgloss.exp (find_gfortran): New proc.

2011-06-30  Ben Elliston  <bje@gnu.org>

	* Makefile.am (all-local): New rule.
	* Makefile.in: Regenerate.

2011-04-12  Ben Elliston  <bje@gnu.org>

	* config/vxworks.exp (vxworks_file): Use "file delete", not "exec
	rm", for better portability.